--- a/Computation_time.ipynb
+++ b/Computation_time.ipynb
@@ -9,192 +9,279 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "source": [
-    "# %%\n",
     "import mne\n",
     "import numpy as np\n",
     "import scipy.signal as sig\n",
     "from fooof import FOOOFGroup\n",
     "\n",
-    "from utils import irasa\n",
-    "\n",
+    "from utils import irasa"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Load data"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "source": [
     "# File names\n",
     "path = \"../data/Fig5/\"\n",
     "fname = \"subj6_off_R1_raw.fif\"\n",
     "sub = mne.io.read_raw_fif(path + fname, preload=True)\n",
     "\n",
     "# Convert mne to numpy\n",
-    "srate = 2400\n",
-    "start = int(0.5 * srate)  # artefact in beginning of recording\n",
-    "stop = int(185 * srate)  # artefact at the end of recording\n",
+    "sample_rate = 2400\n",
+    "start = int(0.5 * sample_rate)  # artefact in beginning of recording\n",
+    "stop = int(185 * sample_rate)  # artefact at the end of recording\n",
     "\n",
     "sub = sub.get_data(start=start, stop=stop)[:9]\n",
+    "band = (1, 30)\n",
+    "irasa_params = dict(data=sub, sf=sample_rate, band=band)\n",
     "\n",
-    "band = (1, 30)"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "source": [
-    "# %% IRASA at default parameters\n",
-    "%%timeit\n",
-    "# =============================================================================\n",
-    "# IRASA time = 12.1 +- 0.2 seconds\n",
-    "# =============================================================================\n",
-    "\n",
-    "IRASA = irasa(data=sub, sf=srate, band=band)\n",
-    "_, _, _, params = IRASA"
+    "welch_params_fooof = dict(fs=sample_rate, nperseg=sample_rate)\n",
+    "welch_params_fooof_highRes = dict(fs=sample_rate, nperseg=4*sample_rate)"
    ],
    "outputs": [
     {
      "output_type": "stream",
-     "name": "stderr",
+     "name": "stdout",
      "text": [
-      "UsageError: Line magic function `%%timeit` not found.\n"
+      "Opening raw data file ../data/Fig5/subj6_off_R1_raw.fif...\n",
+      "Isotrak not found\n",
+      "    Range : 0 ... 463199 =      0.000 ...   193.000 secs\n",
+      "Ready.\n",
+      "Reading 0 ... 463199  =      0.000 ...   193.000 secs...\n"
      ]
     }
    ],
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "source": [
-    "# %% IRASA does not slow down if spectral resolution is increased/decreased\n",
-    "%%timeit\n",
-    "# =============================================================================\n",
-    "# IRASA time = 12.4 +- 0.3\n",
-    "# =============================================================================\n",
-    "\n",
-    "IRASA = irasa(data=sub, sf=srate, band=band, win_sec=20)\n",
-    "_, _, _, params = IRASA\n"
+    "#### IRASA at default parameters\n",
+    "13.0 +- 0.3 seconds (September 22nd 2021)"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "source": [
+    "%timeit IRASA = irasa(**irasa_params)"
    ],
    "outputs": [
     {
      "output_type": "stream",
-     "name": "stderr",
+     "name": "stdout",
      "text": [
-      "UsageError: Line magic function `%%timeit` not found.\n"
+      "13 s ± 283 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "source": [
-    "\n",
-    "# %% IRASA does not slow down if spectral resolution is increased/decreased\n",
-    "%%timeit\n",
-    "# =============================================================================\n",
-    "# IRASA time = 12 +- 0.4\n",
-    "# =============================================================================\n",
-    "\n",
-    "IRASA = irasa(data=sub, sf=srate, band=band, win_sec=0.5)\n",
-    "_, _, _, params = IRASA\n"
+    "#### IRASA does not slow down if spectral resolution is decreased\n",
+    "13.1 +- 0.3 seconds (September 22nd 2021)"
    ],
-   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "source": [
-    "\n",
-    "# %% IRASA slows down if number of hset is increased\n",
-    "%%timeit\n",
-    "# =============================================================================\n",
-    "# IRASA time = 55 +- 0.2\n",
-    "# =============================================================================\n",
-    "\n",
-    "IRASA = irasa(data=sub, sf=srate, band=band, hset=np.arange(1.1, 1.9, 0.01))\n",
-    "_, _, _, params = IRASA\n"
+    "%timeit IRASA = irasa(win_sec=20, **irasa_params)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "13.1 s ± 297 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### IRASA does not slow down if spectral resolution is increased\n",
+    "12.3 +- 0.6 seconds (September 22nd 2021)"
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "source": [
-    "\n",
-    "# %% IRASA slows down if values of hset is increased\n",
-    "%%timeit\n",
-    "# =============================================================================\n",
-    "# IRASA time = 1min 6s ± 2.02 s per loop (mean ± std. dev. of 7 runs,\n",
-    "# 1 loop each)\n",
-    "# =============================================================================\n",
-    "\n",
-    "IRASA = irasa(data=sub, sf=srate, band=band, hset=np.arange(10.1, 10.9, 0.05))\n",
-    "_, _, _, params = IRASA\n"
+    "%timeit IRASA = irasa(win_sec=0.5, **irasa_params)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "12.3 s ± 606 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### IRASA slows down if number of hset is increased\n",
+    "59.4 +- 1.2 seconds (September 22nd 2021)"
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "source": [
-    "\n",
-    "# %% Fooof fast even if psd calc included\n",
+    "%timeit IRASA = irasa(hset=np.arange(1.1, 1.9, 0.01), **irasa_params)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "59.4 s ± 1.19 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### IRASA slows down if values of hset is increased\n",
+    "64 +- 2 seconds (September 22nd 2021)"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "source": [
+    "%timeit IRASA = irasa(hset=np.arange(10.1, 10.9, 0.05), **irasa_params)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1min 4s ± 1.83 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Fooof is fast even if psd calculation is included\n",
+    "269 +- 2 miliseconds (September 22nd 2021)"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "source": [
     "%%timeit\n",
-    "# =============================================================================\n",
-    "# FOOOF 265 ms +- 5 ms\n",
-    "# =============================================================================\n",
-    "\n",
-    "# Signal params\n",
-    "welch_params = dict(fs=srate, nperseg=srate)\n",
-    "freq, psd_sub = sig.welch(sub, **welch_params)\n",
+    "freq, psd_sub = sig.welch(sub, **welch_params_fooof)\n",
     "\n",
     "fm = FOOOFGroup(verbose=False)\n",
-    "fm.fit(freq, psd_sub, band)\n"
+    "fm.fit(freq, psd_sub, band)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "278 ms ± 10.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Fooof is twice as fast without PSD calculcation\n",
+    "126 +- 6 miliseconds (September 22nd 2021)"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "source": [
+    "freq, psd_sub = sig.welch(sub, **welch_params_fooof)"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "source": [
-    "\n",
-    "# %% Fooof twice as fast without PSD calculcation\n",
     "%%timeit\n",
-    "# =============================================================================\n",
-    "# FOOOF 123 ms +- 1.1 ms\n",
-    "# =============================================================================\n",
-    "\n",
     "fm = FOOOFGroup(verbose=False)\n",
-    "fm.fit(freq, psd_sub, band)\n"
+    "fm.fit(freq, psd_sub, band)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "126 ms ± 5.92 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Fooof is slow if the spectral resolution is high\n",
+    "418 +- 3 miliseconds (September 22nd 2021)"
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "source": [
-    "\n",
-    "# %% Fooof slow if spectral resolution too high\n",
     "%%timeit\n",
-    "# =============================================================================\n",
-    "# FOOOF 409 ms ± 3.96 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-    "# =============================================================================\n",
     "\n",
-    "# Signal params\n",
-    "welch_params = dict(fs=srate, nperseg=4*srate)\n",
-    "freq, psd_sub = sig.welch(sub, **welch_params)\n",
+    "freq, psd_sub = sig.welch(sub, **welch_params_fooof_highRes)\n",
     "\n",
     "fm = FOOOFGroup(verbose=False)\n",
-    "fm.fit(freq, psd_sub, band)\n",
-    "\n",
-    "# %%\n"
+    "fm.fit(freq, psd_sub, band)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "418 ms ± 3.49 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
