--- a/Fig2.ipynb
+++ b/Fig2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "source": [
     "from pathlib import Path\n",
     "\n",
@@ -23,33 +23,42 @@
     "from fooof import FOOOF\n",
     "from fooof.sim.gen import gen_aperiodic\n",
     "\n",
-    "from utils import detect_plateau_onset, elec_phys_signal\n"
+    "from utils import detect_plateau_onset, elec_phys_signal"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "source": [
-    "# %% Load params and make directory\n",
-    "\n",
-    "# Load params\n",
-    "yaml_file = open('params.yml')\n",
-    "parsed_yaml_file = yaml.load(yaml_file, Loader=yaml.FullLoader)\n",
-    "globals().update(parsed_yaml_file)\n",
-    "\n",
-    "Path(fig_path).mkdir(parents=True, exist_ok=True)  # make directory\n"
+    "#### Load params and make directory"
    ],
-   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "# %% Real data\n",
+    "yaml_file = open('params.yml')\n",
+    "parsed_yaml_file = yaml.load(yaml_file, Loader=yaml.FullLoader)\n",
+    "globals().update(parsed_yaml_file)\n",
     "\n",
+    "Path(fig_path).mkdir(parents=True, exist_ok=True)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Load empirical data of dataset 1"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "source": [
     "# Load data\n",
     "data_path = \"../data/Fig2/\"\n",
     "fname9 = \"subj9_off_R1_raw.fif\"\n",
@@ -108,12 +117,17 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "source": [
-    "# %% a) Simulate PSD with white noise plateau\n",
-    "\n",
-    "# Make noise\n",
+    "#### a) Simulate PSD with white noise plateau"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "source": [
+    "# Make 1/f-noise\n",
     "sim_exponent = 2\n",
     "aperiodic_params = dict(exponent=sim_exponent, nlv=0.00005, seed=3)\n",
     "signal_sim, _ = elec_phys_signal(**aperiodic_params)\n",
@@ -138,11 +152,18 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "source": [
-    "# %% Plot params a)\n",
-    "plot_sim = (freq[signal_sim], psd_sim[signal_sim], c_sim)\n",
+    "#### Set plot parameters for a)"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "# %% Pack lines to plot\n",
+    "plot_sim = (freq[signal_sim], psd_sim[signal_sim], c_sim)  # (x, y, color)\n",
     "plot_plateau = (freq[plateau_sim], psd_sim[plateau_sim], c_noise)\n",
     "plot_ground = (freq, 10**ground_truth, c_sim)\n",
     "\n",
@@ -181,11 +202,16 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "source": [
-    "# %% Plot params b)\n",
-    "\n",
+    "#### Set plot parameters for b)"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "source": [
     "# Detect Noise floor\n",
     "plateau_onset_sub9 = detect_plateau_onset(freq, psd_sub9, f_start=1)\n",
     "\n",
@@ -193,12 +219,12 @@
     "signal_sub9 = (freq <= plateau_onset_sub9)\n",
     "plateau_sub9 = (freq >= plateau_onset_sub9)\n",
     "\n",
-    "# Prepare plot\n",
-    "plot_sub9 = (freq, psd_sub9, c_real)\n",
+    "# Pack lines to plot\n",
+    "plot_sub9 = (freq, psd_sub9, c_real)  # (x, y, color)\n",
     "plot_sub9_signal = (freq[signal_sub9], psd_sub9[signal_sub9], c_real)\n",
     "plot_sub9_plateau = (freq[plateau_sub9], psd_sub9[plateau_sub9], c_noise)\n",
     "\n",
-    "# Get Oscillation coordinates sub9\n",
+    "# Get oscillation coordinates sub9\n",
     "peak_center_freq1 = 23\n",
     "peak_center_freq2 = 350\n",
     "\n",
@@ -239,19 +265,23 @@
     "ylabel_b = r\"PSD [$\\mu$$V^2$/Hz]\"\n",
     "\n",
     "axes_b = dict(xlabel=None, ylabel=ylabel_b, xlim=xlim_b, ylim=ylim_b,\n",
-    "              xticks=xticks_b, xticklabels=xticks_b)\n",
-    "\n"
+    "              xticks=xticks_b, xticklabels=xticks_b)"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "source": [
-    "# %% Calc c)\n",
-    "\n",
-    "# Simulate psd_sub9\n",
+    "#### Simulate a signal that reproduces the empirical signal of b)"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "source": [
+    "# Set 3 different 1/f-exponents to reproduce psd_sub9\n",
     "exponent1 = 1\n",
     "exponent15 = 1.5\n",
     "exponent2 = 2\n",
@@ -353,16 +383,29 @@
     "\n",
     "psd_plateau_fits = [fit1, fit15, fit2]\n",
     "\n",
-    "spec9_fit_label = fr\"fooof LFP $\\beta=${exp_sub9:.2f}\"\n",
-    "\n",
-    "# % Plot params c)\n",
+    "spec9_fit_label = fr\"fooof LFP $\\beta=${exp_sub9:.2f}\""
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Set plot parameters for c)"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "source": [
     "plot_sub9 = (freq, psd_sub9, c_real)\n",
-    "plot_peak1 = (freq, psd_signal1, c_low)\n",
-    "plot_peak15 = (freq, psd_signal15, c_med)\n",
-    "plot_peak2 = (freq, psd_signal2, c_high)\n",
+    "plot_signal1 = (freq, psd_signal1, c_low)\n",
+    "plot_signal15 = (freq, psd_signal15, c_med)\n",
+    "plot_signal2 = (freq, psd_signal2, c_high)\n",
     "\n",
     "# Summarize\n",
-    "psd_plateau_vary = [plot_peak1, plot_peak15, plot_peak2]\n",
+    "psd_plateau_vary = [plot_signal1, plot_signal15, plot_signal2]\n",
     "plot_plateau1 = (freq, psd_aperiodic1, c_ground)\n",
     "plot_plateau15 = (freq, psd_aperiodic15, c_ground)\n",
     "plot_plateau2 = (freq, psd_aperiodic2, c_ground)\n",
@@ -371,7 +414,6 @@
     "xlabel_c = \"Frequency in Hz\"\n",
     "\n",
     "# Summarize\n",
-    "# plateau_kwargs = [low_kwargs, med_kwargs, high_kwargs]\n",
     "plateau_labels = [r\"$\\beta_{fit}$=\"f\"{exp1:.2f}\",\n",
     "                  r\"$\\beta_{fit}$=\"f\"{exp15:.2f}\",\n",
     "                  r\"$\\beta_{fit}$=\"f\"{exp2:.2f}\"]\n",
@@ -402,11 +444,17 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "source": [
-    "# %% Plot Params\n",
-    "\n",
+    "#### Plot settings"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "source": [
+    "# Mpl settings\n",
     "mpl.rcParams['xtick.labelsize'] = legend_fontsize\n",
     "mpl.rcParams['ytick.labelsize'] = legend_fontsize\n",
     "mpl.rcParams['axes.labelsize'] = legend_fontsize\n",
@@ -419,18 +467,22 @@
     "\n",
     "line_fit = dict(lw=2, ls=\":\", zorder=5)\n",
     "line_ground = dict(lw=.5, ls=\"--\", zorder=5)\n",
-    "psd_aperiodic_kwargs = dict(lw=0.5)\n",
-    "\n"
+    "psd_aperiodic_kwargs = dict(lw=0.5)"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "source": [
-    "# %% Plot\n",
-    "\n",
+    "# Figure 2"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "source": [
     "# Prepare Gridspec\n",
     "fig = plt.figure(figsize=[fig_width, 6.5], constrained_layout=True)\n",
     "gs0 = gridspec.GridSpec(3, 1, figure=fig, height_ratios=[10, 1, 10])\n",
@@ -547,7 +599,7 @@
     "\n",
     "plt.savefig(fig_path + \"Fig2.pdf\", bbox_inches=\"tight\")\n",
     "plt.savefig(fig_path + \"Fig2.png\", dpi=1000, bbox_inches=\"tight\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ],
    "outputs": [
     {
@@ -563,13 +615,6 @@
      }
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {}
   }
  ],
