--- a/Fig4.ipynb
+++ b/Fig4.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "# %%\n",
+    "import warnings\n",
     "from pathlib import Path\n",
     "\n",
     "import matplotlib as mpl\n",
@@ -60,27 +60,36 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### Load params and make directory"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "# %% Load params and make directory\n",
-    "\n",
-    "# Load params\n",
     "yaml_file = open('params.yml')\n",
     "parsed_yaml_file = yaml.load(yaml_file, Loader=yaml.FullLoader)\n",
     "globals().update(parsed_yaml_file)\n",
     "\n",
-    "Path(fig_path).mkdir(parents=True, exist_ok=True)  # make directory\n"
+    "Path(fig_path).mkdir(parents=True, exist_ok=True)"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Load empirical data of dataset 2 and calc PSD before, during, and after the seizure"
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "# %% Load data, calc PSD\n",
-    "\n",
     "# EEG Params\n",
     "sample_rate = 256\n",
     "cha_nm = \"F3-C3\"\n",
@@ -120,11 +129,16 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### Simulate sawtooth signal of same duration as empirical seizure"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "# %% Simulate sawtooth signal of same length\n",
-    "\n",
     "# Sawtooth Signal\n",
     "saw_power = 0.02\n",
     "saw_width = 0.69\n",
@@ -147,7 +161,6 @@
     "                                duration=duration, seed=seed, highpass=True)\n",
     "full_saw = aperiodic + saw_full\n",
     "\n",
-    "\n",
     "# normalize\n",
     "full_saw = (full_saw - full_saw.mean()) / full_saw.std()\n",
     "\n",
@@ -158,16 +171,23 @@
     "\n",
     "freq, psd_saw_pre = sig.welch(saw_pre, **welch_params)\n",
     "freq, psd_saw_seiz = sig.welch(saw_seiz, **welch_params)\n",
-    "freq, psd_saw_post = sig.welch(saw_post, **welch_params)\n"
+    "freq, psd_saw_post = sig.welch(saw_post, **welch_params)"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "source": [
-    "# %% Fit fooof\n",
+    "#### Fit fooof before, during, and after the seizure"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "source": [
+    "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "# Fooof params: standard\n",
     "fooof_params = dict(verbose=False)\n",
@@ -184,34 +204,21 @@
     "fit_seiz_sim, lab_seiz_saw = fooof_fit(psd_saw_seiz, \"seiz\", **calc_fooof)\n",
     "fit_post_sim, lab_post_saw = fooof_fit(psd_saw_post, \"post\", **calc_fooof)"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "/opt/anaconda3/envs/one-over-f/lib/python3.9/site-packages/fooof/core/funcs.py:95: RuntimeWarning: divide by zero encountered in log10\n",
-      "  ys = ys + offset - np.log10(xs**exp)\n",
-      "/opt/anaconda3/envs/one-over-f/lib/python3.9/site-packages/fooof/core/funcs.py:95: RuntimeWarning: divide by zero encountered in log10\n",
-      "  ys = ys + offset - np.log10(xs**exp)\n",
-      "/opt/anaconda3/envs/one-over-f/lib/python3.9/site-packages/fooof/core/funcs.py:95: RuntimeWarning: divide by zero encountered in log10\n",
-      "  ys = ys + offset - np.log10(xs**exp)\n",
-      "/opt/anaconda3/envs/one-over-f/lib/python3.9/site-packages/fooof/core/funcs.py:95: RuntimeWarning: divide by zero encountered in log10\n",
-      "  ys = ys + offset - np.log10(xs**exp)\n",
-      "/opt/anaconda3/envs/one-over-f/lib/python3.9/site-packages/fooof/core/funcs.py:95: RuntimeWarning: divide by zero encountered in log10\n",
-      "  ys = ys + offset - np.log10(xs**exp)\n",
-      "/opt/anaconda3/envs/one-over-f/lib/python3.9/site-packages/fooof/core/funcs.py:95: RuntimeWarning: divide by zero encountered in log10\n",
-      "  ys = ys + offset - np.log10(xs**exp)\n"
-     ]
-    }
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Plot settings"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "source": [
-    "# %% Plot settings\n",
-    "\n",
+    "# mpl settings\n",
     "mpl.rcParams['xtick.labelsize'] = legend_fontsize\n",
     "mpl.rcParams['ytick.labelsize'] = legend_fontsize\n",
     "mpl.rcParams['axes.labelsize'] = legend_fontsize\n",
@@ -234,7 +241,6 @@
     "ylim_a1 = (ymin, 200)\n",
     "axes_a1 = dict(yticks=yticks_a1, yticklabels=yticklabels_a1, xlim=xlim_a1,\n",
     "               ylim=ylim_a1)\n",
-    "\n",
     "\n",
     "# a2 EEG PSD\n",
     "xticks_a2 = [1, 10, 100]\n",
@@ -289,18 +295,22 @@
     "# Add colored rectangles\n",
     "rect_EEG_pre_params = dict(xy=xy_pre, width=width, color=c_pre, **rect)\n",
     "rect_EEG_seiz_params = dict(xy=xy_seiz, width=width, color=c_seiz, **rect)\n",
-    "rect_EEG_post_params = dict(xy=xy_post, width=width, color=c_post, **rect)\n",
-    "\n"
+    "rect_EEG_post_params = dict(xy=xy_post, width=width, color=c_post, **rect)"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "source": [
-    "# %% Plot\n",
-    "\n",
+    "# Figure 4"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
     "fig, axes = plt.subplots(2, 2, figsize=[fig_width, 4.5], sharex=\"col\",\n",
     "                         gridspec_kw=dict(width_ratios=[1, .65]))\n",
     "\n",
@@ -370,12 +380,6 @@
     "ax.loglog(freq, fit_seiz_sim, \"--\", c=c_seiz, lw=2, label=lab_seiz_saw)\n",
     "ax.loglog(freq, fit_post_sim, \"--\", c=c_post, lw=2, label=lab_post_saw)\n",
     "\n",
-    "# =============================================================================\n",
-    "# # Plot ground truth\n",
-    "# ax.loglog(*plot_ground, **line_ground,\n",
-    "#           label=fr\"$\\beta_{{{ground}}}$={exponent:.2f}\")\n",
-    "# =============================================================================\n",
-    "\n",
     "# Set axes\n",
     "ax.set(**axes_b2)\n",
     "ax.legend(borderaxespad=0, labelspacing=.3, borderpad=.2)\n",
@@ -387,7 +391,7 @@
     "plt.tight_layout()\n",
     "plt.savefig(fig_path + \"Fig4.pdf\", bbox_inches=\"tight\")\n",
     "plt.savefig(fig_path + \"Fig4.png\", dpi=1000, bbox_inches=\"tight\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ],
    "outputs": [
     {
@@ -406,11 +410,16 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "source": [
-    "# %% Supplementary Figure\n",
-    "\n",
+    "#### Calc fooof both with default params and with specifically tuned parameters for the absence seizure"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "source": [
     "fm_emp = FOOOF(verbose=False)\n",
     "fm_sim = FOOOF(verbose=False)\n",
     "\n",
@@ -426,23 +435,20 @@
     "fm_emp_tuned.fit(freq, psd_EEG_seiz, freq_range)\n",
     "fm_sim_tuned.fit(freq, psd_saw_seiz, freq_range)"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "/opt/anaconda3/envs/one-over-f/lib/python3.9/site-packages/scipy/optimize/minpack.py:833: OptimizeWarning: Covariance of the parameters could not be estimated\n",
-      "  warnings.warn('Covariance of the parameters could not be estimated',\n"
-     ]
-    }
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Supplementary figure to 4 showing the corresponding fooof fits"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "source": [
-    "# %% Plot Supp Mat\n",
     "fig, axes = plt.subplots(2, 2,  figsize=[fig_width, 7], sharex=True)\n",
     "\n",
     "ax = axes[0, 0]\n",
@@ -501,27 +507,9 @@
     "\n",
     "plt.savefig(fig_path + \"Fig4_SuppMat.pdf\", bbox_inches=\"tight\")\n",
     "plt.savefig(fig_path + \"Fig4_SuppMat.png\", dpi=1000,\n",
-    "            bbox_inches=\"tight\")\n"
+    "            bbox_inches=\"tight\")"
    ],
    "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "/var/folders/07/j2k588bn66nddqtk3lsg4sgr0000gp/T/ipykernel_43723/494291003.py:11: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
-      "  ax.set_yticklabels(yticks, fontsize=legend_fontsize)\n",
-      "/var/folders/07/j2k588bn66nddqtk3lsg4sgr0000gp/T/ipykernel_43723/494291003.py:24: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
-      "  ax.set_yticklabels(yticks, fontsize=legend_fontsize)\n",
-      "/var/folders/07/j2k588bn66nddqtk3lsg4sgr0000gp/T/ipykernel_43723/494291003.py:39: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
-      "  ax.set_xticklabels(xticks, fontsize=legend_fontsize)\n",
-      "/var/folders/07/j2k588bn66nddqtk3lsg4sgr0000gp/T/ipykernel_43723/494291003.py:40: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
-      "  ax.set_yticklabels(yticks, fontsize=legend_fontsize)\n",
-      "/var/folders/07/j2k588bn66nddqtk3lsg4sgr0000gp/T/ipykernel_43723/494291003.py:50: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
-      "  ax.set_xticklabels(xticks, fontsize=legend_fontsize)\n",
-      "/var/folders/07/j2k588bn66nddqtk3lsg4sgr0000gp/T/ipykernel_43723/494291003.py:52: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
-      "  ax.set_yticklabels(yticks, fontsize=legend_fontsize)\n"
-     ]
-    },
     {
      "output_type": "display_data",
      "data": {
@@ -535,13 +523,6 @@
      }
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {}
   }
  ],
