--- a/Fig5.ipynb
+++ b/Fig5.ipynb
@@ -11,7 +11,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "# %%\n",
     "from pathlib import Path\n",
     "\n",
     "import matplotlib as mpl\n",
@@ -31,27 +30,36 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### Load params and make directory"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "# %% Load params and make directory\n",
-    "\n",
-    "# Load params\n",
     "yaml_file = open('params.yml')\n",
     "parsed_yaml_file = yaml.load(yaml_file, Loader=yaml.FullLoader)\n",
     "globals().update(parsed_yaml_file)\n",
     "\n",
-    "Path(fig_path).mkdir(parents=True, exist_ok=True)  # make directory\n"
+    "Path(fig_path).mkdir(parents=True, exist_ok=True)"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### a) Simulate signal with three oscillations and fit"
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "# %% a) Sim Signal with Three Oscillations and Fit\n",
-    "\n",
     "# fit in all frequency ranges from 1 to 80...\n",
     "lower_fitting_borders = range(1, 80)\n",
     "# ... to 100 Hz\n",
@@ -67,7 +75,7 @@
     "                   (peak_center_freq2, peak_amplitude2, peak_width),\n",
     "                   (peak_center_freq3, peak_amplitude3, peak_width)]\n",
     "\n",
-    "# Sim Signal\n",
+    "# Sim signal\n",
     "_, full_signal = elec_phys_signal(sim_exponent_a,\n",
     "                                  periodic_params=periodic_params)\n",
     "\n",
@@ -81,17 +89,22 @@
     "# Filter 1-100Hz\n",
     "filt_a = (freq_a <= 100)\n",
     "freq_a = freq_a[filt_a]\n",
-    "sim_psd_a = sim_psd_a[filt_a]\n"
+    "sim_psd_a = sim_psd_a[filt_a]"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "source": [
-    "# %% Calc Aperiodic Component for largest range\n",
-    "\n",
+    "#### Apply IRASA to calculate the aperiodic component for the largest range"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "source": [
     "freq_range = (lower_fitting_borders[0], upper_fitting_border)\n",
     "freq_ir, psd_aperiodic, _, _ = irasa(full_signal, band=freq_range,\n",
     "                                     sf=sample_rate)\n",
@@ -102,11 +115,16 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "source": [
-    "# %% a) IRASA (takes very long)\n",
-    "\n",
+    "#### Apply IRASA to all lower fitting border to calculate the fitting error for each range (can take 1 to 2 minutes)"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "source": [
     "# Fit IRASA and subtract ground truth to obtain fitting error\n",
     "fit_errors = calc_error(full_signal, lower_fitting_borders,\n",
     "                        upper_fitting_border, sim_exponent_a, sample_rate)\n",
@@ -117,19 +135,24 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "100%|██████████| 79/79 [01:52<00:00,  1.42s/it]\n"
+      "100%|██████████| 79/79 [01:46<00:00,  1.34s/it]\n"
      ]
     }
    ],
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "source": [
-    "# %% b) Highpass sim\n",
-    "\n",
-    "# Make noise\n",
+    "#### b) Simulate highpass filtered signal"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "source": [
+    "# Make 1/f-noise\n",
     "sim_exponent_b = 2\n",
     "noise_params_b = dict(exponent=sim_exponent_b, nlv=0, highpass=True, seed=3)\n",
     "aperiodic_b, _ = elec_phys_signal(**noise_params_b)\n",
@@ -142,11 +165,16 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "source": [
-    "# %% b) Calc IRASA\n",
-    "\n",
+    "#### b) Apply IRASA"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
     "# plot fooof as ground truth\n",
     "freq_range = (2, 30)\n",
     "irasa_params = dict(sf=sample_rate, band=freq_range, win_sec=4)\n",
@@ -199,12 +227,17 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "source": [
-    "# %% c) lowpass sim\n",
-    "\n",
-    "# Make noise\n",
+    "#### c) Simulate lowpass filtered signal"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "source": [
+    "# Make 1/f-noise\n",
     "noise_params_c = dict(exponent=sim_exponent_b, nlv=0.00003, seed=3)\n",
     "aperiodic_b, _ = elec_phys_signal(**noise_params_c)\n",
     "\n",
@@ -228,11 +261,16 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "source": [
-    "# %% c) Calc irasa\n",
-    "\n",
+    "#### c) Apply IRASA"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "source": [
     "IR_fit_plot_args_c = []\n",
     "IR_fit_plot_kwargs_c = []\n",
     "\n",
@@ -248,7 +286,7 @@
     "    irasa_result = irasa(data=aperiodic_b, hset=np.linspace(1.1, h_max, N_h),\n",
     "                         **irasa_params)\n",
     "\n",
-    "    # Extract results\n",
+    "    # unpack results\n",
     "    freq_IR, _, IR_ap, IR_fit = irasa_result\n",
     "    IR_slope = -IR_fit[\"Slope\"][0]\n",
     "    IR_offset = IR_fit[\"Intercept\"][0]\n",
@@ -281,11 +319,16 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "source": [
-    "# %% d) Real Spectrum\n",
-    "\n",
+    "#### d) Load empirical data of dataset 1 and calc PSD"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "source": [
     "# Path\n",
     "path = \"../data/Fig5/\"\n",
     "fname = \"subj6_off_R1_raw.fif\"\n",
@@ -379,80 +422,91 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "source": [
-    "# %% d) Calc IRASA\n",
-    "\n",
+    "#### d) Apply IRASA"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "source": [
+    "# Frequency ranges to apply\n",
     "band_low = (1, 30)\n",
     "band_high = (30, 45)\n",
     "\n",
-    "h_max = 3\n",
-    "win_sec = 4\n",
+    "h_max = 3  # maxiumum resampling factor\n",
+    "win_sec = 4  # window length\n",
+    "\n",
+    "# Calc freq ranges based on resampling factor\n",
     "f_min_low = band_low[0] / h_max\n",
     "f_max_low = band_low[1] * h_max\n",
     "f_min_high = band_high[0] / h_max\n",
     "f_max_high = band_high[1] * h_max\n",
     "f_step = 1 / win_sec\n",
     "\n",
+    "# Evaluated freq range\n",
     "band_low_eff = (band_low[0] * h_max, band_low[1] / h_max)\n",
     "\n",
-    "N_h = len(np.arange(1.1, 1.9, 0.05))\n",
-    "hset = np.linspace(1.1, h_max, N_h)\n",
+    "N_h = len(np.arange(1.1, 1.9, 0.05))  # number of resampling factors\n",
+    "hset = np.linspace(1.1, h_max, N_h)  # h-set (list of resampling factors)\n",
     "\n",
+    "# Apply IRASA\n",
     "IRASA_low = irasa(data=sub, sf=sample_rate, band=band_low, hset=hset)\n",
     "IRASA_high = irasa(data=sub, sf=sample_rate, band=band_high, hset=hset)\n",
     "IRASA_low_eff = irasa(data=sub, sf=sample_rate, band=band_low_eff, hset=hset)\n",
     "\n",
-    "freq_low, psd_ap_low, psd_osc_low, fit_res_low = IRASA_low\n",
-    "freq_high, psd_ap_high, psd_osc_high, fit_res_high = IRASA_high\n",
-    "freq_low_eff, psd_ap_low_eff, psd_osc_low_eff, fit_res_low_eff = IRASA_low_eff\n",
+    "# unpack results\n",
+    "freq_low, _, _, fit_res_low = IRASA_low\n",
+    "freq_high, _, _, fit_res_high = IRASA_high\n",
+    "_, _, _, fit_res_low_eff = IRASA_low_eff\n",
     "\n",
-    "psd_ap_low = psd_ap_low[0]\n",
-    "psd_osc_low = psd_osc_low[0]\n",
-    "psd_ap_high = psd_ap_high[0]\n",
-    "psd_osc_high = psd_osc_high[0]\n",
+    "# unpack exponents\n",
+    "IR_exponent_low = -fit_res_low[\"Slope\"][0]\n",
+    "IR_exponent_high = -fit_res_high[\"Slope\"][0]\n",
+    "IR_exponent_low_eff = -fit_res_low_eff[\"Slope\"][0]\n",
     "\n",
-    "psd_ap_low_eff = psd_ap_low_eff[0]\n",
-    "psd_osc_low_eff = psd_osc_low_eff[0]\n",
-    "\n",
-    "IR_slope_low = -fit_res_low[\"Slope\"][0]\n",
-    "IR_slope_high = -fit_res_high[\"Slope\"][0]\n",
-    "IR_slope_low_eff = -fit_res_low_eff[\"Slope\"][0]\n",
-    "\n",
-    "label_low = r\"$\\beta(h_{max}$=\"f\"{h_max})={IR_slope_low:.2f}\"\n",
-    "label_high = r\"$\\beta(h_{max}$=\"f\"{h_max})={IR_slope_high:.2f}\"\n",
-    "label_low_eff = r\"$\\beta(h_{max}$=\"f\"{h_max})={IR_slope_low_eff:.2f}\"\n",
-    "\n",
+    "# unpack y-intercepts\n",
     "IR_offset_low = fit_res_low[\"Intercept\"][0]\n",
     "IR_offset_high = fit_res_high[\"Intercept\"][0]\n",
     "IR_offset_low_eff = fit_res_low_eff[\"Intercept\"][0]\n",
     "\n",
-    "IR_fit_low = gen_aperiodic(freq_low, (IR_offset_low,\n",
-    "                                      IR_slope_low))\n",
-    "IR_fit_high = gen_aperiodic(freq_high, (IR_offset_high,\n",
-    "                                        IR_slope_high))\n",
-    "IR_fit_low_eff = gen_aperiodic(freq_low_eff, (IR_offset_low_eff,\n",
-    "                                              IR_slope_low_eff))\n",
+    "# unpack plot labels\n",
+    "label_low = r\"$\\beta(h_{max}$=\"f\"{h_max})={IR_exponent_low:.2f}\"\n",
+    "label_high = r\"$\\beta(h_{max}$=\"f\"{h_max})={IR_exponent_high:.2f}\"\n",
+    "label_low_eff = r\"$\\beta(h_{max}$=\"f\"{h_max})={IR_exponent_low_eff:.2f}\"\n",
     "\n",
+    "# Generate 1/f based on fit result of fit range\n",
+    "IR_fit_low = gen_aperiodic(freq_low, (IR_offset_low,\n",
+    "                                      IR_exponent_low))\n",
+    "IR_fit_high = gen_aperiodic(freq_high, (IR_offset_high,\n",
+    "                                        IR_exponent_high))\n",
+    "\n",
+    "# Pack lines for plotting\n",
     "plot_IRASA_low = (freq_low, 10**IR_fit_low, h_colors[0])\n",
     "plot_IRASA_high = (freq_high, 10**IR_fit_high, h_colors[0])\n",
-    "plot_IRASA_low_eff = (freq_low_eff, 10**IR_fit_low_eff, h_colors[0])\n",
     "\n",
+    "# Evaluated/effective frequency ranges\n",
+    "\n",
+    "# Freq arrays\n",
     "freq_IR_eff_low = np.arange(f_min_low, f_max_low, f_step)\n",
     "freq_IR_eff_high = np.arange(f_min_high, f_max_high, f_step)\n",
     "freq_IR_eff_low_eff = np.arange(band_low[0], band_low[1], f_step)\n",
     "\n",
+    "# Generate 1/f based on fit result of evaluated freq range\n",
     "IR_fit_eff_low = gen_aperiodic(freq_IR_eff_low,\n",
-    "                               (IR_offset_low, IR_slope_low))\n",
+    "                               (IR_offset_low, IR_exponent_low))\n",
     "IR_fit_eff_high = gen_aperiodic(freq_IR_eff_high,\n",
-    "                                (IR_offset_high, IR_slope_high))\n",
+    "                                (IR_offset_high, IR_exponent_high))\n",
     "IR_fit_eff_low_eff = gen_aperiodic(freq_IR_eff_low_eff,\n",
-    "                                   (IR_offset_low_eff, IR_slope_low_eff))\n",
+    "                                   (IR_offset_low_eff, IR_exponent_low_eff))\n",
     "\n",
+    "# Filter in freq range of interest\n",
     "mask_eff1 = (freq_IR_eff_low <= band_low[0])\n",
     "mask_eff2 = (freq_IR_eff_low >= band_low[1])\n",
     "\n",
+    "# Pack lines for plotting\n",
     "plot_IRASA_eff_low1 = (freq_IR_eff_low[mask_eff1],\n",
     "                       10**IR_fit_eff_low[mask_eff1],\n",
     "                       h_colors[0])\n",
@@ -466,6 +520,7 @@
     "                          10**IR_fit_eff_low_eff,\n",
     "                          h_colors[0])\n",
     "\n",
+    "# Compare IRASA to fooof for both freq ranges\n",
     "fm.fit(freq, psd_sub, band_low)\n",
     "fit = gen_aperiodic(fm.freqs, fm.aperiodic_params_)\n",
     "label = rf\"$\\beta(fooof)$={fm.aperiodic_params_[1]:.2f}\"\n",
@@ -482,11 +537,17 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "cell_type": "markdown",
    "source": [
-    "# %% Plot settings\n",
-    "\n",
+    "#### Plot settings"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "source": [
+    "# mpl settings\n",
     "mpl.rcParams['xtick.labelsize'] = legend_fontsize\n",
     "mpl.rcParams['ytick.labelsize'] = legend_fontsize\n",
     "mpl.rcParams['axes.labelsize'] = legend_fontsize\n",
@@ -573,16 +634,22 @@
     "\n",
     "# f)\n",
     "axes_f = dict(xticks=xticks_b, xticklabels=xticks_b, xlim=xlim_d,\n",
-    "              yticks=[], ylim=ylim_d)\n"
+    "              yticks=[], ylim=ylim_d)"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "source": [
-    "# %% Plot\n",
+    "# Figure 5"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "source": [
     "fig = plt.figure(figsize=[fig_width, 5.5], constrained_layout=True)\n",
     "\n",
     "gs0 = gridspec.GridSpec(2, 1, figure=fig, height_ratios=[1, 1])\n",
@@ -779,7 +846,7 @@
     "\n",
     "plt.savefig(fig_path + \"Fig5.pdf\", bbox_inches=\"tight\")\n",
     "plt.savefig(fig_path + \"Fig5.png\", dpi=1000, bbox_inches=\"tight\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ],
    "outputs": [
     {
@@ -795,13 +862,6 @@
      }
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {}
   }
  ],
