--- a/Fig7.ipynb
+++ b/Fig7.ipynb
@@ -53,19 +53,30 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### Load params and make directory"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "# %% Load params and make directory\n",
-    "\n",
-    "# Load params\n",
     "yaml_file = open('params.yml')\n",
     "parsed_yaml_file = yaml.load(yaml_file, Loader=yaml.FullLoader)\n",
     "globals().update(parsed_yaml_file)\n",
     "\n",
-    "Path(fig_path).mkdir(parents=True, exist_ok=True)  # make directory"
+    "Path(fig_path).mkdir(parents=True, exist_ok=True)"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Set EEG and Welch params and state seizure time points"
+   ],
    "metadata": {}
   },
   {
@@ -89,10 +100,17 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### Load empirical data of dataset 3 and calc PSD"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "# %% Load data, calc PSD\n",
+    "# %% Load data\n",
     "data_path = \"../data/Fig4+7/\"\n",
     "seiz_data = np.load(data_path + electrode + \".npy\", allow_pickle=True)\n",
     "\n",
@@ -119,11 +137,16 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### Simulate sawtooth signal of same length"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "source": [
-    "# %% Simulate sawtooth signal of same length\n",
-    "\n",
     "# Sawtooth Parameters\n",
     "saw_power = 0.02\n",
     "saw_width = 0.69\n",
@@ -189,17 +212,22 @@
     "\n",
     "freq, psd_saw_osc_pre = sig.welch(saw_osc_pre, **welch_params)\n",
     "freq, psd_saw_osc_seiz = sig.welch(saw_osc_seiz, **welch_params)\n",
-    "freq, psd_saw_osc_post = sig.welch(saw_osc_post, **welch_params)\n"
+    "freq, psd_saw_osc_post = sig.welch(saw_osc_post, **welch_params)"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Apply IRASA"
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "source": [
-    "# %% Fit irasa\n",
-    "\n",
     "# Calc irasa pre-, post-, and during seizure\n",
     "freq_range = [1, 100]\n",
     "\n",
@@ -229,11 +257,17 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### Plot settings"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "source": [
-    "# %% Plot settings\n",
-    "\n",
+    "# %% mpl settings\n",
     "mpl.rcParams['xtick.labelsize'] = legend_fontsize\n",
     "mpl.rcParams['ytick.labelsize'] = legend_fontsize\n",
     "mpl.rcParams['axes.labelsize'] = legend_fontsize\n",
@@ -241,7 +275,7 @@
     "mpl.rcParams[\"axes.spines.right\"] = False\n",
     "mpl.rcParams[\"axes.spines.top\"] = False\n",
     "\n",
-    "# Tick params\n",
+    "# tick params\n",
     "ticks_time = dict(length=6, width=1.5)\n",
     "ticks_psd = dict(length=4, width=1)\n",
     "panel_labels = dict(x=0, y=1.02, fontsize=panel_fontsize,\n",
@@ -327,11 +361,16 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Figure 7"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "source": [
-    "# %% Plot\n",
-    "\n",
     "fig, axes = plt.subplots(3, 2, figsize=[fig_width, 7], sharex=\"col\",\n",
     "                         gridspec_kw=dict(width_ratios=[1, .65]))\n",
     "\n",
@@ -434,7 +473,7 @@
     "plt.tight_layout()\n",
     "plt.savefig(fig_path + \"Fig7.pdf\", bbox_inches=\"tight\")\n",
     "plt.savefig(fig_path + \"Fig7.png\", dpi=1000, bbox_inches=\"tight\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ],
    "outputs": [
     {
@@ -453,11 +492,17 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Supplementary figure: Show IRASA results"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "source": [
-    "# %% Supp irasa Result\n",
-    "\n",
+    "# Apply IRASA\n",
     "freqs, aperiodic_EEG_pre, periodic_EEG_pre, params_EEG_pre = \\\n",
     "                        irasa(data_pre, sf=sample_rate, band=freq_range)\n",
     "_, aperoidic_EEG_seiz, periodic_EEG_seiz, params_EEG_seiz = \\\n",
@@ -472,10 +517,10 @@
     "_, aperiodic_saw_post, periodic_saw_post, params_saw_post = \\\n",
     "                        irasa(saw_post, sf=sample_rate, band=freq_range)\n",
     "\n",
-    "\n",
     "_, ap_saw_osc_seiz, osc_saw_osc_seiz, params_saw_osc_seiz = \\\n",
     "                        irasa(saw_osc_seiz, sf=sample_rate, band=freq_range)\n",
     "\n",
+    "# Extract results\n",
     "exponent_EEG_pre = -params_EEG_pre[\"Slope\"][0]\n",
     "intercept_EEG_pre = params_EEG_pre[\"Intercept\"][0]\n",
     "exponent_EEG_seiz = -params_EEG_seiz[\"Slope\"][0]\n",
@@ -493,6 +538,7 @@
     "exponent_saw_osc_seiz = -params_saw_osc_seiz[\"Slope\"][0]\n",
     "intercept_saw_osc_seiz = params_saw_osc_seiz[\"Intercept\"][0]\n",
     "\n",
+    "# Generate 1/f based on results\n",
     "ap_fit_EEG_pre = gen_aperiodic(freqs, [intercept_EEG_pre, exponent_EEG_pre])\n",
     "ap_fit_EEG_seiz = gen_aperiodic(freqs, [intercept_EEG_seiz, exponent_EEG_seiz])\n",
     "ap_fit_EEG_post = gen_aperiodic(freqs, [intercept_EEG_post, exponent_EEG_post])\n",
@@ -509,11 +555,16 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### Plot Supplementary Material"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "source": [
-    "# %% Plot loglog\n",
-    "\n",
     "fig, ax = plt.subplots(3, 3, figsize=[fig_width, 7], sharex=True, sharey=\"row\")\n",
     "\n",
     "ax[0, 0].set_title(\"Pre\")\n",
@@ -610,7 +661,7 @@
     "plt.tight_layout()\n",
     "plt.savefig(fig_path + \"Fig7_Supp_loglog.pdf\", bbox_inches=\"tight\")\n",
     "plt.savefig(fig_path + \"Fig7_Supp_loglog.png\", dpi=1000, bbox_inches=\"tight\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ],
    "outputs": [
     {
@@ -626,13 +677,6 @@
      }
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {}
   }
  ],
