--- a/Fig8.ipynb
+++ b/Fig8.ipynb
@@ -11,7 +11,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "source": [
-    "# %%\n",
     "from pathlib import Path\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -22,32 +21,43 @@
     "from fooof.sim.gen import gen_aperiodic\n",
     "from mne.time_frequency import psd_welch\n",
     "\n",
-    "from utils import annotate_range, irasa, detect_plateau_onset\n"
+    "from utils import annotate_range, irasa, detect_plateau_onset"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Load params and make directory"
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "source": [
-    "# %% Load params and make directory\n",
-    "\n",
-    "# Load params\n",
     "yaml_file = open('params.yml')\n",
     "parsed_yaml_file = yaml.load(yaml_file, Loader=yaml.FullLoader)\n",
     "globals().update(parsed_yaml_file)\n",
     "\n",
-    "Path(fig_path).mkdir(parents=True, exist_ok=True)  # make directory"
+    "Path(fig_path).mkdir(parents=True, exist_ok=True)"
    ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Load empirical data of dataset 1 and calc PSD"
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "# %% Load data\n",
+    "# Load data\n",
     "data_path = \"../data/Fig8/\"\n",
     "sub5 = mne.io.read_raw_fif(data_path + \"subj5_on_R1_raw.fif\", preload=True)\n",
     "sub9 = mne.io.read_raw_fif(data_path + \"subj9_on_R8_raw.fif\", preload=True)\n",
@@ -64,6 +74,7 @@
     "\n",
     "sample_rate = 2400\n",
     "\n",
+    "# Calc PSD\n",
     "welch_params_b = {\"fmin\": 1,\n",
     "                  \"fmax\": 600,\n",
     "                  \"tmin\": 0.5,\n",
@@ -76,7 +87,7 @@
     "PSD_sub9, freq = psd_welch(sub9, **welch_params_b)\n",
     "\n",
     "PSD_sub5 = PSD_sub5[0]\n",
-    "PSD_sub9 = PSD_sub9[0]\n"
+    "PSD_sub9 = PSD_sub9[0]"
    ],
    "outputs": [
     {
@@ -129,6 +140,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "#### Apply fooof"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "source": [
@@ -166,9 +184,23 @@
     " peak_width_sub9_1) = fm_sub9.peak_params_[0]\n",
     "(center_freq_sub9_2,\n",
     " peak_power_sub9_2,\n",
-    " peak_width_sub9_2) = fm_sub9.peak_params_[1]\n",
-    "\n",
-    "# Straight fit\n",
+    " peak_width_sub9_2) = fm_sub9.peak_params_[1]"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Connect a straight line between 1Hz and 95Hz "
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "source": [
+    "# straight \"fit\"\n",
     "DeltaX = np.log10(np.diff(freq_range)[0])\n",
     "\n",
     "offset_sub5 = np.log10(PSD_sub5[freq == freq_range[0]][0])\n",
@@ -187,24 +219,41 @@
     "                                               exponent_sub5_straight]))\n",
     "ap_straight_fit_sub9 = gen_aperiodic(fm_sub9.freqs,\n",
     "                                     np.array([offset_sub9,\n",
-    "                                               exponent_sub9_straight]))\n",
-    "\n",
-    "# IRASA fit\n",
+    "                                               exponent_sub9_straight]))"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "#### Apply IRASA"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "source": [
+    "# get timeseries data\n",
     "get_data = dict(start=sample_rate//2, stop=sample_rate*180,\n",
     "                reject_by_annotation=\"NaN\")\n",
     "irasa_sub5 = sub5.get_data(**get_data)\n",
     "irasa_sub9 = sub9.get_data(**get_data)\n",
     "\n",
+    "# apply IRASA and unpack\n",
     "freq_I, _, _, irasa_params_sub5 = irasa(irasa_sub5, band=freq_range,\n",
     "                                        sf=sample_rate)\n",
     "_, _, _, irasa_params_sub9 = irasa(irasa_sub9, band=freq_range, sf=sample_rate)\n",
     "\n",
+    "# extract results\n",
     "irasa_offset_sub5 = irasa_params_sub5[\"Intercept\"][0]\n",
     "irasa_offset_sub9 = irasa_params_sub9[\"Intercept\"][0]\n",
     "\n",
     "exponent_irasa_sub5 = -irasa_params_sub5[\"Slope\"][0]\n",
     "exponent_irasa_sub9 = -irasa_params_sub9[\"Slope\"][0]\n",
     "\n",
+    "# Generate 1/f based on results\n",
     "ap_irasa_fit_sub5 = gen_aperiodic(freq_I,\n",
     "                                  np.array([irasa_offset_sub5,\n",
     "                                            exponent_irasa_sub5]))\n",
@@ -212,17 +261,18 @@
     "                                  np.array([irasa_offset_sub9,\n",
     "                                            exponent_irasa_sub9]))\n",
     "\n",
-    "PSD_plot_sub5 = freq, PSD_sub5, c_real\n",
-    "PSD_plot_sub9 = freq, PSD_sub9, c_real\n",
+    "# pack lines for plotting\n",
+    "PSD_plot_sub5 = (freq, PSD_sub5, c_real)\n",
+    "PSD_plot_sub9 = (freq, PSD_sub9, c_real)\n",
     "\n",
-    "fooof_plot_sub5 = fm_sub5.freqs, 10**ap_fooof_fit_sub5, c_fit_fooof\n",
-    "fooof_plot_sub9 = fm_sub9.freqs, 10**ap_fooof_fit_sub9, c_fit_fooof\n",
+    "fooof_plot_sub5 = (fm_sub5.freqs, 10**ap_fooof_fit_sub5, c_fit_fooof)\n",
+    "fooof_plot_sub9 = (fm_sub9.freqs, 10**ap_fooof_fit_sub9, c_fit_fooof)\n",
     "\n",
-    "straight_plot_sub5 = fm_sub5.freqs, 10**ap_straight_fit_sub5, c_fit_straight\n",
-    "straight_plot_sub9 = fm_sub9.freqs, 10**ap_straight_fit_sub9, c_fit_straight\n",
+    "straight_plot_sub5 = (fm_sub5.freqs, 10**ap_straight_fit_sub5, c_fit_straight)\n",
+    "straight_plot_sub9 = (fm_sub9.freqs, 10**ap_straight_fit_sub9, c_fit_straight)\n",
     "\n",
-    "irasa_plot_sub5 = freq_I, 10**ap_irasa_fit_sub5, c_fit_irasa\n",
-    "irasa_plot_sub9 = freq_I, 10**ap_irasa_fit_sub9, c_fit_irasa\n"
+    "irasa_plot_sub5 = (freq_I, 10**ap_irasa_fit_sub5, c_fit_irasa)\n",
+    "irasa_plot_sub9 = (freq_I, 10**ap_irasa_fit_sub9, c_fit_irasa)"
    ],
    "outputs": [
     {
@@ -237,11 +287,16 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
+   "cell_type": "markdown",
    "source": [
-    "# %% Fig Params\n",
-    "\n",
+    "#### Plot settings"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "source": [
     "panel_labels = dict(x=0, y=1.02, fontsize=panel_fontsize,\n",
     "                    fontdict=dict(fontweight=\"bold\"))\n",
     "panel_description = dict(x=0, y=1.02, fontsize=panel_fontsize)"
@@ -250,11 +305,16 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "source": [
-    "# %% Plot\n",
-    "\n",
+    "# Figure 8"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
     "fig, ax = plt.subplots(2, 2, figsize=(fig_width, 5), sharey=\"row\")\n",
     "\n",
     "ax[0, 0].text(s='    \"Easy\" spectrum', **panel_description,\n",
@@ -385,7 +445,7 @@
     "plt.tight_layout()\n",
     "plt.savefig(fig_path + \"Fig8.pdf\", bbox_inches=\"tight\")\n",
     "plt.savefig(fig_path + \"Fig8.png\", dpi=1000, bbox_inches=\"tight\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ],
    "outputs": [
     {
@@ -401,13 +461,6 @@
      }
     }
    ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
    "metadata": {}
   }
  ],
