--- a/Computation_time.ipynb
+++ b/Computation_time.ipynb
@@ -117,8 +117,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### IRASA does not slow down if spectral resolution is increased\n",
-    "12.3 +- 0.6 seconds (September 22nd 2021)"
+    "#### IRASA does not slow down if spectral resolution is increased: 12.3 +- 0.6 seconds (September 22nd 2021)"
    ],
    "metadata": {}
   },
@@ -142,8 +141,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### IRASA slows down if number of hset is increased\n",
-    "59.4 +- 1.2 seconds (September 22nd 2021)"
+    "#### IRASA slows down if number of hset is increased: 59.4 +- 1.2 seconds (September 22nd 2021)"
    ],
    "metadata": {}
   },
@@ -167,8 +165,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### IRASA slows down if values of hset is increased\n",
-    "64 +- 2 seconds (September 22nd 2021)"
+    "#### IRASA slows down if values of hset is increased: 64 +- 2 seconds (September 22nd 2021)"
    ],
    "metadata": {}
   },
@@ -192,8 +189,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Fooof is fast even if psd calculation is included\n",
-    "269 +- 2 miliseconds (September 22nd 2021)"
+    "#### Fooof is fast even if psd calculation is included: 269 +- 2 miliseconds (September 22nd 2021)"
    ],
    "metadata": {}
   },
@@ -221,8 +217,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Fooof is twice as fast without PSD calculcation\n",
-    "126 +- 6 miliseconds (September 22nd 2021)"
+    "#### Fooof is twice as fast without PSD calculcation: 126 +- 6 miliseconds (September 22nd 2021)"
    ],
    "metadata": {}
   },
@@ -257,8 +252,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### Fooof is slow if the spectral resolution is high\n",
-    "418 +- 3 miliseconds (September 22nd 2021)"
+    "#### Fooof is slow if the spectral resolution is high: 418 +- 3 miliseconds (September 22nd 2021)"
    ],
    "metadata": {}
   },
